# python-project-52

./: .env.example  .gitignore  Makefile  README.md  build.sh  pyproject.toml  setup.cfg
.github/workflows/: python_ci.yml
staticfiles/: staticfiles.json
task_manager/: custom_mixins.py  settings.py  tests.py  texts.py  urls.py  views.py
task_manager/labels/: forms.py  models.py  tests.py  views.py
task_manager/locale/en/LC_MESSAGES/: django.mo  django.po
task_manager/locale/ru/LC_MESSAGES/: django.mo  django.po
task_manager/management/commands/: createsuper.py
task_manager/statuses/: forms.py  models.py  tests.py  views.py
task_manager/tasks/: filters.py  forms.py  models.py  tests.py  urls.py  views.py
task_manager/templates/: index.html  login.html  registration.html
task_manager/templates/errors/: error_404.html  error_500.html
task_manager/templates/layout/: base.html  footer.html  header.html
task_manager/templates/users/: delete.html
task_manager/users/: forms.py  models.py  tests.py  urls.py  views.py
task_manager/users/migrations/: 0001_initial.py
