[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "hexlet tasks manager"
authors = ["Abra19 <evabrarova@gmail.com>"]
readme = "README.md"
repository = "https://github.com/Abra19/python-project-52"
packages = [{ include = "task_manager" }]

[tool.poetry.dependencies]
python = "^3.10"
python-dotenv = "^1.0.1"
django = "^5.0.2"
dj-database-url = "^2.1.0"
gunicorn = "^21.2.0"
psycopg2-binary = "^2.9.9"
whitenoise = "^6.6.0"
django-bootstrap5 = "^23.4"


[tool.poetry.group.dev.dependencies]
flake8 = "^7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
